# booster_soccer

./: AGENTS.md  CLAUDE.md  test.txt
docs/: chase_vector_guide.md
scripts/: depth_obstacle_monitor.py  direct_ball_head_tracker.py  run_depth_obstacle_monitor.sh  run_smooth_ball_tracking.sh  safe_chase_obstacle_stop.sh  safe_chase_vector.sh  smooth_head_search.sh  sniff_head_commands.py  start_vision.sh  test_head_pitch_limit.sh  test_head_search_only.py  test_head_yaw_limit.sh  test_lost_ball_degree_turn.sh  test_turn_degrees_only.sh  view_booster_app_camera.py
src/brain/: CMakeLists.txt
src/brain/behavior_trees/: body_track_only.xml  head_track_no_search.xml  head_track_only.xml  quick_chase.xml
src/brain/behavior_trees/subtrees/: subtree_cam_find_and_track_ball.xml
src/brain/config/: config.yaml
src/brain/include/: brain.h  brain_config.h  brain_tree.h  visualization_publisher.h
src/brain/src/: brain.cpp  brain.cpp.bak_person_ball_alias_1781086629  brain_config.cpp  brain_tree.cpp  brain_tree.cpp.bak_camtrack_20260608_113103  brain_tree.cpp.bak_direct_pixel_track_1781081088  brain_tree.cpp.bak_track_sensitivity_1781074017  robot_client.cpp  robot_client.cpp.bak_head2006_1781072954  robot_client.cpp.bak_head_deadband_1781074017  robot_client.cpp.bak_swap_head_dirs_1781073546  robot_client.cpp.bak_swap_head_dirs_1781078843  visualization_publisher.cpp
src/perception_bridge/: package.xml  setup.cfg  setup.py
src/perception_bridge/perception_bridge/: ball_to_detection_bridge.py
src/vision/config/: vision.yaml  vision.yaml.bak_20260603_113354
(+2 files in other folders)
